--- a/solution_notebooks_caviar_network_solutions_autograded.ipynb
+++ b/solution_notebooks_caviar_network_solutions_autograded.ipynb
@@ -6,7 +6,7 @@
         "id": "QnQjjSV0zMZ4"
       },
       "source": [
-        "# **Networks PSET - Sample Solutions**"
+        "# **Networks problem set - Solutions**"
       ]
     },
     {
@@ -116,7 +116,7 @@
         "G_summaries = {'Nodes': [], 'Edges': []}\n",
         "for i in range(1,12): \n",
         "  var_name = \"phase\" + str(i)\n",
-        "  file_name = \"https://raw.githubusercontent.com/ragini30/Networks-Homework/main/\" + var_name + \".csv\"\n",
+        "  file_name = var_name + \".csv\"\n",
         "  phases[i] = pd.read_csv(file_name, index_col = [\"players\"])\n",
         "  phases[i].columns = \"n\" + phases[i].columns\n",
         "  phases[i].index = phases[i].columns\n",
